frontend/production/lens/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lens-frontend-stable
  namespace: frontend
  labels:
    app: lens-frontend
spec:
  selector:
    app: lens-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: metrics
      port: 4040
      targetPort: 4040
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: lens-frontend-canary
  namespace: frontend
spec:
  selector:
    app: lens-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: metrics
      port: 4040
      targetPort: 4040
  type: ClusterIP
