frontend/production/lens/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: traefik
  listeners:
    - name: https-root
      protocol: HTTPS
      port: 8443
      hostname: lens.rohitpotato.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lens-rohitpotato-xyz-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-www
      protocol: HTTPS
      port: 8443
      hostname: www.lens.rohitpotato.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lens-rohitpotato-xyz-tls
      allowedRoutes:
        namespaces:
          from: Same
