frontend/production/lens/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lens-frontend
  namespace: frontend
spec:
  parentRefs:
    - name: web-gateway
  hostnames:
    - lens.rohitpotato.xyz
    - www.lens.rohitpotato.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lens-frontend-stable  
          port: 3000
          weight: 100
        - name: lens-frontend-canary
          port: 3000
          weight: 0
